...
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/account_email"
                android:hint="@string/account_setup_basics_email_hint"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent" />

...
                android:id="@+id/account_password"
                android:inputType="textPassword"
                android:hint="@string/account_setup_basics_password_hint"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:nextFocusDown="@+id/next" />

            <CheckBox
                android:id="@+id/show_password"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/account_setup_basics_show_password" />
...
            <com.fsck.k9.view.ClientCertificateSpinner
                android:id="@+id/account_client_certificate_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <CheckBox
                    android:id="@+id/account_oauth2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_basics_oauth2_token" />
            <com.fsck.k9.view.FoldableLinearLayout
                android:id="@+id/foldable_advanced_options"
                android:layout_width="match_parent"
...
