package com.fsck.k9.planck.ui.activities;

import android.app.Activity;
import android.app.Instrumentation;
import android.content.ClipData;
import android.content.ClipboardManager;
import android.content.ContentResolver;
import android.content.Context;
import android.content.Intent;
import android.content.pm.PackageManager;
import android.content.pm.ResolveInfo;
import android.content.res.Resources;
import android.database.Cursor;
import android.database.sqlite.SQLiteDatabase;
import android.graphics.Bitmap;
import android.graphics.BitmapFactory;
import android.graphics.Color;
import android.graphics.Rect;
import android.net.Uri;
import android.os.Build;
import android.os.Environment;
import android.os.Handler;
import android.os.IBinder;
import android.os.Looper;
import android.os.RemoteException;
import android.text.format.DateUtils;
import android.util.Log;
import android.view.KeyEvent;
import android.view.View;
import android.widget.TextView;

import androidx.annotation.NonNull;
import androidx.appcompat.widget.Toolbar;
import androidx.core.content.ContextCompat;
import androidx.core.content.FileProvider;
import androidx.test.core.app.ApplicationProvider;
import androidx.test.espresso.Espresso;
import androidx.test.espresso.IdlingPolicies;
import androidx.test.espresso.IdlingRegistry;
import androidx.test.espresso.IdlingResource;
import androidx.test.espresso.NoMatchingViewException;
import androidx.test.espresso.Root;
import androidx.test.espresso.ViewInteraction;
import androidx.test.espresso.action.ViewActions;
import androidx.test.espresso.intent.Intents;
import androidx.test.espresso.intent.rule.IntentsTestRule;
import androidx.test.platform.app.InstrumentationRegistry;
import androidx.test.runner.lifecycle.ActivityLifecycleMonitorRegistry;
import androidx.test.uiautomator.By;
import androidx.test.uiautomator.BySelector;
import androidx.test.uiautomator.Direction;
import androidx.test.uiautomator.UiDevice;
import androidx.test.uiautomator.UiObject;
import androidx.test.uiautomator.UiObject2;
import androidx.test.uiautomator.UiObjectNotFoundException;
import androidx.test.uiautomator.UiSelector;
import androidx.test.uiautomator.Until;

import com.fsck.k9.BuildConfig;
import com.fsck.k9.Preferences;
import com.fsck.k9.R;
import com.fsck.k9.common.GetListSizeAction;
import com.fsck.k9.planck.PlanckColorUtils;
import com.fsck.k9.planck.PlanckUtils;

import org.apache.commons.io.FileUtils;
import org.apache.commons.io.IOUtils;
import org.hamcrest.CoreMatchers;
import org.hamcrest.Matcher;
import org.json.JSONArray;
import org.json.JSONException;
import org.json.JSONObject;

import java.io.BufferedReader;
import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.FileOutputStream;
import java.io.FileWriter;
import java.io.IOException;
import java.io.InputStream;
import java.io.InputStreamReader;
import java.io.OutputStream;
import java.lang.reflect.Method;
import java.nio.file.Files;
import java.sql.Connection;
import java.sql.DriverManager;
import java.util.Arrays;
import java.util.Collection;
import java.util.Iterator;
import java.util.Objects;
import java.util.Scanner;
import java.util.concurrent.TimeUnit;

import foundation.pEp.jniadapter.Rating;
import security.planck.ui.PlanckUIUtils;
import security.planck.ui.support.export.ExportPlanckSupportDataPresenterKt;
import timber.log.Timber;

import static android.content.ContentValues.TAG;
import static android.database.sqlite.SQLiteDatabase.openOrCreateDatabase;
import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.action.ViewActions.swipeDown;
import static androidx.test.espresso.action.ViewActions.swipeUp;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.intent.Checks.checkNotNull;
import static androidx.test.espresso.intent.Intents.intending;
import static androidx.test.espresso.intent.matcher.IntentMatchers.isInternal;
import static androidx.test.espresso.matcher.RootMatchers.isDialog;
import static androidx.test.espresso.matcher.RootMatchers.isPlatformPopup;
import static androidx.test.espresso.matcher.ViewMatchers.hasDescendant;
import static androidx.test.espresso.matcher.ViewMatchers.isAssignableFrom;
import static androidx.test.espresso.matcher.ViewMatchers.isCompletelyDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isRoot;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static androidx.test.platform.app.InstrumentationRegistry.getInstrumentation;
import static androidx.test.runner.lifecycle.Stage.RESUMED;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.appendTextInTextView;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.containstText;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.exists;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.getTextFromView;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.hasValueEqualTo;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.saveSizeInInt;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.valuesAreEqual;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.viewIsDisplayed;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.viewWithTextIsDisplayed;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.waitUntilIdle;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.withBackgroundColor;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.withRecyclerView;
import static com.fsck.k9.planck.ui.activities.UtilsPackage.withTextColor;
import static java.lang.Thread.sleep;
import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
import static junit.framework.Assert.assertTrue;
import static org.hamcrest.CoreMatchers.not;
import static org.hamcrest.CoreMatchers.notNullValue;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.in;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertThat;
import static foundation.pEp.jniadapter.Rating.pEpRatingMistrust;
import static org.junit.Assert.fail;

import junit.framework.AssertionFailedError;


public class TestUtils {

    private static final String ANIMATION_PERMISSION = "android.permission.SET_ANIMATION_SCALE";
    private static final float ANIMATION_DISABLED = 0.0f;
    private static final String APP_ID = BuildConfig.APPLICATION_ID;
    private static final int LAUNCH_TIMEOUT = 5000;
    private static final String DESCRIPTION = "tester one";
    private static final String USER_NAME = "testerJ";
    private static final int FIVE_MINUTES = 5;
    private static final int MINUTE_IN_SECONDS = 60;
    private static final int SECOND_IN_MILIS = 1000;

    private static UiDevice device;
    private static Context context;
    private Resources resources;
    private Instrumentation instrumentation;
    private int[] messageListSize = new int[2];
    private int totalAccounts = -1;
    private int account = 0;

    public static final long TIMEOUT_TEST = FIVE_MINUTES * MINUTE_IN_SECONDS * SECOND_IN_MILIS;
    private TestConfig testConfig;
    public String[] botList;
    public boolean testReset = false;
    public static JSONObject json;
    public static JSONArray jsonArray;
    public static String rating;
    public String trustWords = "nothing";
    private String emailForDevice;
    private static final String HOST = "@sq.planck.security";
    private Connection connection;


    public TestUtils(UiDevice device, Instrumentation instrumentation) {
        TestUtils.device = device;
        this.instrumentation = instrumentation;
        context = InstrumentationRegistry.getInstrumentation().getTargetContext();
        resources = context.getResources();
    }

    public static Context getContext() {
        return context;
    }

    public void increaseTimeoutWait() {
        long waitingTime = DateUtils.SECOND_IN_MILLIS * 500;
        IdlingPolicies.setMasterPolicyTimeout(waitingTime, TimeUnit.MILLISECONDS);
        IdlingPolicies.setIdlingResourceTimeout(waitingTime, TimeUnit.MILLISECONDS);
    }

    private String getLauncherPackageName() {
        final Intent intent = new Intent(Intent.ACTION_MAIN);
        intent.addCategory(Intent.CATEGORY_HOME);
        PackageManager pm = InstrumentationRegistry.getInstrumentation().getTargetContext().getPackageManager();
        ResolveInfo resolveInfo = pm.resolveActivity(intent, PackageManager.MATCH_DEFAULT_ONLY);
        return resolveInfo.activityInfo.packageName;
    }

    private void automaticAccount() {
        trustedServer();
    }

    private void trustedServer() {
        /*if (testConfig.getTrusted_server(account)) {
            waitForIdle();
            clickView(R.id.manual_setup);
            waitForIdle();
            while (true) {
                try {
                    while (exists(onView(withId(R.id.account_trust_server)))) {
                        setCheckBox("Trust server", true);
                        waitForIdle();
                        onView(withId(R.id.next)).perform(click());
                        waitForIdle();
                        return;
                    }
                    waitForIdle();
                    onView(withId(R.id.next)).perform(click());
                    waitForIdle();
                } catch (Exception eNext) {
                    Timber.i("Trust server not enabled yet");
                }
            }
        } else {
            clickNextButton();
        }*/
    }

    private void clickNextButton() {
        waitForIdle();
        onView(withId(R.id.next)).perform(click());
        for (int i = 0; i < 100; i++) {
            waitForIdle();
        }
        while (viewIsDisplayed(R.id.account_email)) {
            waitForIdle();
        }
        while (exists(onView(withId(R.id.parentPanel)))) {
            pressOKButtonInDialog();
            waitForIdle();
        }
        try {
            UiObject2 uiObject = device.findObject(By.res(BuildConfig.APPLICATION_ID + ":id/alertTitle"));
            while (uiObject.getText() != null) {
                pressBack();
                waitForIdle();
                onView(withId(R.id.next)).perform(click());
                waitForIdle();
                uiObject = device.findObject(By.res(BuildConfig.APPLICATION_ID + ":id/alertTitle"));
            }
        } catch (Exception ex) {
            Timber.i("Doesn't exist popup alert message");
        }
    }

    private void fillAccountAddress(String accountAddress) {
        if (!getTextFromView(onView(withId(R.id.account_email))).equals(accountAddress)) {
            removeTextFromTextView(R.id.account_email);
        }
        while (getTextFromView(onView(withId(R.id.account_email))).equals("")) {
            try {
                waitForIdle();
                onView(withId(R.id.account_email)).perform(click());
                waitForIdle();
                onView(withId(R.id.account_email)).perform(typeText(accountAddress), closeSoftKeyboard());
            } catch (Exception ex) {
                Timber.i("Cannot fill account email: " + ex.getMessage());
            }
        }
    }

    private void gmailAccount() {
        //onView(withId(R.id.account_oauth2)).perform(click());
        onView(withId(R.id.next)).perform(click());
        onView(withId(R.id.next)).perform(click());
        waitForIdle();
        onView(withId(R.id.next)).perform(click());
        waitForIdle();
        onView(withId(R.id.next)).perform(click());
    }

    private void accountDescription(String description, String userName, boolean isSync) {
        doWaitForResource(R.id.account_description);
        while (!viewIsDisplayed(R.id.account_description)) {
            waitForIdle();
        }
        while (getTextFromView(onView(withId(R.id.account_description))).equals("")) {
            try {
                waitForIdle();
                onView(withId(R.id.account_description)).perform(click());
                waitForIdle();
                if (!description.equals("")) {
                    onView(withId(R.id.account_description)).perform(typeText(description), closeSoftKeyboard());
                } else {
                    onView(withId(R.id.account_description)).perform(typeText("TEST"), closeSoftKeyboard());
                }
                waitForIdle();
            } catch (Exception ex) {
                Timber.i("Cannot find account description field");
            }
        }
        while (getTextFromView(onView(withId(R.id.account_name))).equals("")) {
            try {
                waitForIdle();
                onView(withId(R.id.account_name)).perform(click());
                waitForIdle();
                if (!userName.equals("")) {
                    onView(withId(R.id.account_name)).perform(typeText(userName), closeSoftKeyboard());
                } else {
                    onView(withId(R.id.account_name)).perform(typeText("USER"), closeSoftKeyboard());
                }
                waitForIdle();
            } catch (Exception ex) {
                Timber.i("Cannot find account name field");
            }
        }
        if (testConfig.test_number.equals("3") || !isSync) {
            onView(withId(R.id.pep_enable_sync_account)).perform(click());
        }
        waitForIdle();
        onView(withId(R.id.done)).perform(click());
    }

    public void composeMessageButton() {
        waitForIdle();
        getMessageListSize();
        clickView(R.id.fab_button_compose_message);
        waitForIdle();
        onView(withId(R.id.to)).perform(closeSoftKeyboard());
        waitForIdle();
    }

    void goBackToMessageCompose() {
        boolean backToMessageCompose = false;
        while (!backToMessageCompose) {
            pressBack();
            waitForIdle();
            if (exists(onView(withId(R.id.send)))) {
                backToMessageCompose = true;
            }
        }
    }

    public void clickView(int viewId) {
        boolean buttonClicked = false;
        while (!viewIsDisplayed(viewId)) {
            waitForIdle();
        }
        doWaitForResource(viewId);
        if (exists(onView(withId(R.id.toolbar)))) {
            onView(withId(R.id.toolbar)).check(matches(isDisplayed()));
        }
        while (!buttonClicked) {
            if (exists(onView(withId(viewId))) || viewIsDisplayed(viewId)) {
                waitForIdle();
                try {
                    onView(withId(viewId)).check(matches(isDisplayed()));
                    onView(withId(viewId)).perform(click());
                    waitForIdle();
                    buttonClicked = true;
                    Timber.i("View found, can click it");
                } catch (Exception ex) {
                    Timber.i("View not found, cannot click it: " + ex);
                }
            } else {
                buttonClicked = true;
            }
        }
    }

    private void assertCurrentActivityIsInstanceOf(Class<? extends Activity> activityClass) {
        Activity currentActivity = getCurrentActivity();
        checkNotNull(currentActivity);
        checkNotNull(activityClass);
        assertTrue(currentActivity.getClass().isAssignableFrom(activityClass));
    }

    public static Activity getCurrentActivity() {

        final Activity[] resumedActivity = {null};
        getInstrumentation().runOnMainSync(() -> {
            Collection resumedActivities = ActivityLifecycleMonitorRegistry.getInstance()
                    .getActivitiesInStage(RESUMED);
            if (resumedActivities.iterator().hasNext()) {
                resumedActivity[0] = (Activity) resumedActivities.iterator().next();
            }
        });
        return resumedActivity[0];
    }

    public void createAccount() {
        createNewAccountWithPermissions();
        if (test_number().equals("0")) {
            getMessageListSize();
        }
    }

    public String getAccountEmailForDevice() {
        if (emailForDevice != null) return emailForDevice;
        String out = "error: email for device not initialized";
        File downloadsDirectory = Environment.getExternalStoragePublicDirectory(Environment.DIRECTORY_DOWNLOADS);
        File directory = new File(downloadsDirectory.getAbsolutePath() + File.separator + "test");
        File configFile = new File(directory, "test_config.txt");
        if (!configFile.exists()) return BuildConfig.PLANCK_TEST_EMAIL_ADDRESS;

        FileInputStream fin;
        if (configFile.canRead()) {
            try {
                fin = new FileInputStream(configFile);
                InputStreamReader inputStreamReader = new InputStreamReader(fin);
                BufferedReader bufferedReader = new BufferedReader(inputStreamReader);
                String receiveString;
                while ((receiveString = bufferedReader.readLine()) != null && !receiveString.contains("mail")) {
                    Timber.v("Searching for test email address for device...");
                }
                fin.close();
                bufferedReader.close();
                if (receiveString != null && !receiveString.isEmpty()) {
                    String[] line = receiveString.split(" = ");
                    out = emailForDevice = line[1];
                }
            } catch (Exception e) {
                Timber.e(e, "could not read from file %s", configFile);
                out = e.getMessage();
            }
        }
        return out;
    }

    public void moveFile(File file, File dir) throws IOException {
        if (!dir.exists()) {
            dir.mkdirs();
        }
        File newFile = new File(dir, file.getName());
        Files.move(file.toPath(), newFile.toPath(), REPLACE_EXISTING);
    }

    public void readConfigFile() {
        testConfig = new TestConfig();
        String[] strSplit = new String[0];
        String[] line = new String[2];
        boolean configFileReaded = false;
        String manufacturer = Build.MANUFACTURER;
        String model = Build.MODEL;
        if (manufacturer.equals("Google")&& !model.equals("Pixel 3 XL")) {
            model = "default";
        }
        while (!configFileReaded) {
            try {
                InputStream is = getInstrumentation().getContext().getAssets().open("features/test_config/" + model + ".txt");
                String str = IOUtils.toString(is);
                strSplit = str.split("\n");
                configFileReaded = true;
            } catch (IOException e) {
                model = "default";
                Timber.i("Cannot find config file for " + model + ", using default file");
            }
        }
        for (int readingLine = 0; readingLine < strSplit.length; readingLine++) {
            line = strSplit[readingLine].split(" = ");
            switch (line[0]) {
                case "mail":
                    testConfig.setMail(line[1], 0);
                    if (!testConfig.getMail(0).equals("")) {
                        totalAccounts = 1;
                    }
                    break;
                case "password":
                    testConfig.setPassword(line[1], 0);
                    break;
                case "username":
                    testConfig.setUsername(line[1], 0);
                    break;
                case "trusted_server":
                    if (line[1].equals("true")) {
                        testConfig.setTrusted_server(true, 0);
                    } else if (line[1].equals("false")) {
                        testConfig.setTrusted_server(false, 0);
                    } else {
                        fail("Trusted_server must be true or false");
                    }
                    break;
                case "imap_server":
                    testConfig.setImap_server(line[1], 0);
                    break;
                case "smtp_server":
                    testConfig.setSmtp_server(line[1], 0);
                    break;
                case "imap_port":
                    testConfig.setImap_port(line[1], 0);
                    break;
                case "smtp_port":
                    testConfig.setSmtp_port(line[1], 0);
                    break;
                case "mail2":
                    testConfig.setMail(line[1], 1);
                    if (!testConfig.getMail(1).equals("")) {
                        totalAccounts = 2;
                    }
                    break;
                case "password2":
                    testConfig.setPassword(line[1], 1);
                    if (testConfig.getPassword(1).equals("") && !testConfig.getMail(1).equals("")) {
                        fail("Password is empty");
                    }
                    break;
                case "username2":
                    testConfig.setUsername(line[1], 1);
                    break;
                case "trusted_server2":
                    if (line[1].equals("true")) {
                        testConfig.setTrusted_server(true, 1);
                    } else if (line[1].equals("false")) {
                        testConfig.setTrusted_server(false, 1);
                    } else {
                        fail("Trusted_server must be true or false");
                    }
                    break;
                case "imap_server2":
                    testConfig.setImap_server(line[1], 1);
                    break;
                case "smtp_server2":
                    testConfig.setSmtp_server(line[1], 1);
                    break;
                case "imap_port2":
                    testConfig.setImap_port(line[1], 1);
                    break;
                case "smtp_port2":
                    testConfig.setSmtp_port(line[1], 1);
                    break;
                case "mail3":
                    testConfig.setMail(line[1], 2);
                    if (!testConfig.getMail(2).equals("")) {
                        totalAccounts = 3;
                    }
                    break;
                case "password3":
                    testConfig.setPassword(line[1], 2);
                    if (testConfig.getPassword(2).equals("") && !testConfig.getMail(2).equals("")) {
                        fail("Password is empty");
                    }
                    break;
                case "username3":
                    testConfig.setUsername(line[1], 2);
                    break;
                case "trusted_server3":
                    if (line[1].equals("true")) {
                        testConfig.setTrusted_server(true, 2);
                    } else if (line[1].equals("false")) {
                        testConfig.setTrusted_server(false, 2);
                    } else {
                        fail("Trusted_server must be true or false");
                    }
                    break;
                case "imap_server3":
                    testConfig.setImap_server(line[1], 2);
                    break;
                case "smtp_server3":
                    testConfig.setSmtp_server(line[1], 2);
                    break;
                case "imap_port3":
